fixed spacing issued on homepage

--- a/app/assets/stylesheets/signup_form.scss
+++ b/app/assets/stylesheets/signup_form.scss
@@ -9,6 +9,7 @@ $primary-color: #066DEE;
 
 #sign-up-form {
 	margin-left: 50px;
+	width: 80%;
 }
 
 #main-action {
